--- a/src/business-model-canvas/index.html
+++ b/src/business-model-canvas/index.html
@@ -6,31 +6,31 @@
   </head>
 
   <body>
-    <main>
-      <div class="content">
-        <div class="header-container h1">
-          <div class="header">
-            <h1>Business model canvas</h1>
-          </div>
-          <div id="buttons">
-            <button id="change-src">Change src</button>
-          </div>
-          <div class="container">
-            <business-model-canvas id="viewer"></business-model-canvas>
-            <h2>Run tests</h2>
-            <code>npx wdio run ./wdio.conf.ts --spec ./src/business-model-canvas/index.test.ts</code>
+      <main>
+        <div class="content">
+          <div class="header-container h1">
+            <div class="header">
+              <h1>Business model canvas</h1>
+            </div>
+            <div id="buttons">
+              <button id="change-src">Change src</button>
+            </div>
+            <div class="container">
+              <business-model-canvas></business-model-canvas>
+              <h2>Run tests</h2>
+              <code>npx wdio run ./wdio.conf.ts --spec ./src/business-model-canvas/index.test.ts</code>
+            </div>
           </div>
         </div>
-      </div>
-    </main>
+      </main>
 
     <script lang="javascript">
       const buttons = document.getElementById("buttons");
-      const viewer = document.getElementById("viewer");
+      const viewer = document.getElementsByTagName("business-model-canvas")[0];
 
       buttons.addEventListener("click", function (event) {
         const target = event.target;
-      
+
         if (target.id === "change-src") {
           viewer.setAttribute("src", "invalid-url");
         }
