refactored fetch util

--- a/src/business-model-canvas/index.html
+++ b/src/business-model-canvas/index.html
@@ -32,7 +32,7 @@
         const target = event.target;
 
         if (target.id === "change-src") {
-          viewer.setAttribute("src", "invalid-url");
+          viewer.setAttribute("src", "./_test-data/test.yml");
         }
       });
     </script>
