--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -29,7 +29,9 @@
           <div class="container">
             <bpmn-viewer src="./_test-data/custom-links.bpmn"></bpmn-viewer>
             <h2>Run tests</h2>
-            <code>npx wdio run ./wdio.conf.ts --spec ./src/bpmn-viewer/index.test.ts</code>
+            <code>
+              npx wdio run ./wdio.conf.ts --spec ./src/bpmn-viewer/index.test.ts
+            </code>
           </div>
         </div>
       </div>
