--- a/src/command-viewer/index.html
+++ b/src/command-viewer/index.html
@@ -1,109 +1,41 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Command viewer</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Command viewer</title>
-</head>
-
-<body>
-  <main>
-    <div class="content">
-      <div class="header-container h1">
-        <div class="header">
-          <h1>Command viewer</h1>
-        </div>
-        <div class="container">
-          <command-viewer model-json='
-          {
-            "name": "Test command",
-            "description": "........",
-            "parameters": {
-              "required": [
-                "depot",
-                "colleteral",
-                "production_options"
-              ],
-              "properties": {
-                "depot": {
-                  "required": [
-                    "type_of_contruction",
-                    "orginal_deposit",
-                    "remaining_deposit"
-                  ],
-                  "description": "A person is an entity that the law recognizes as having rights and obligations. A person can be either a natural person or a legal person. Persons are official parties envolved in a contract (they sign the contract) apposed to third parties who play a role in a contract (do not sign the contract).\n\nFor loan contracts the following persons are envolved:\n\n- consumers\n- guarantors\n- lenders",
-                  "properties": {
-                    "type_of_contruction": {
-                      "type": "string",
-                      "description": "A person is an entity that the law recognizes as having rights and obligations. A person can be either a natural person or a legal person. Persons are official parties envolved in a contract (they sign the contract) apposed to third parties who play a role in a contract (do not sign the contract).\n\nFor loan contracts the following persons are envolved:\n\n- consumers\n- guarantors\n- lenders",
-                      "enum": [
-                        "NEW_CONSTRUCTION",
-                        "RENOVATION"
-                      ]
-                    },
-                    "orginal_deposit": {
-                      "type": "integer",
-                      "example": "test"
-                    },
-                    "remaining_deposit": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "colleteral": {
-                  "required": [
-                    "market_value_before_rennovation",
-                    "market_value_after_rennovation"
-                  ],
-                  "properties": {
-                    "market_value_before_rennovation": {
-                      "type": "integer"
-                    },
-                    "market_value_after_rennovation": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "production_options": {
-                  "required": [
-                    "remaining_construction_deposit_amount_threshold",
-                    "remaining_construction_deposit_percentage_threshold",
-                    "remaining_construction_deposit_adjustment_percentage"
-                  ],
-                  "properties": {
-                    "remaining_construction_deposit_amount_threshold": {
-                      "type": "integer"
-                    },
-                    "remaining_construction_deposit_percentage_threshold": {
-                      "type": "number"
-                    },
-                    "remaining_construction_deposit_adjustment_percentage": {
-                      "type": "number"
-                    }
-                  }
-                }
-              }
-            },
-            "exceptions": {
-              "threshold_exceeded_exception": {
-                "name": "Threshold exceeded",
-                "description": "......",
-                "parameters": {
-                  "required": [
-                    "message"
-                  ],
-                  "properties": {
-                    "message": {
-                      "type": "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-          '></command-viewer>
+  <body>
+    <main>
+      <div class="content">
+        <div class="header-container h1">
+          <div class="header">
+            <h1>Command viewer</h1>
+          </div>
+          <div id="buttons">
+            <button id="change-src">Change src</button>
+          </div>
+          <div class="container">
+            <command-viewer src="./_test-data/command1.yml"></command-viewer>
+            <h2>Run tests</h2>
+            <code>
+              npx wdio run ./wdio.conf.ts --spec ./src/command-viewer/index.test.ts
+            </code>
+          </div>
         </div>
       </div>
-  </main>
-</body>
+    </main>
+
+    <script lang="javascript">
+      const buttons = document.getElementById("buttons");
+      const viewer = document.getElementsByTagName("command-viewer")[0];
+
+      buttons.addEventListener("click", function (event) {
+        const target = event.target;
+        if (target.id === "change-src") {
+          viewer.setAttribute("src", viewer.src.endsWith("command1.yml") ? "./_test-data/command2.yml" : "./_test-data/command1.yml");
+        }
+      });
+    </script>
+  </body>
 </html>
