--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -28,7 +28,9 @@
         </div>
       </div>
   </main>
-  <script>
+  <script type="module">
+    import "../index.ts";
+
     document.addEventListener('DOMContentLoaded', () => {
       const element = document.createElement('bpmn-viewer');
       element.setAttribute('data-xml', `
@@ -150,4 +152,4 @@
   </script>
 </body>
 
-</html>   
+</html>
