--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,9 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>BPMN viewer</title>
-    <style>
-      bpmn-viewer {
-        display: block;
-        height: 500px;
-      }
-    </style>
+    <title>Components</title>
   </head>
 
   <body>
@@ -16,7 +11,7 @@
       <div class="content">
         <div class="header-container h1">
           <div class="header">
-            <h1>BPMN Viewer</h1>
+            <h1>Components</h1>
           </div>
           <div class="container">
             <ul>
@@ -34,6 +29,5 @@
         </div>
       </div>
     </main>
-    <script src="./index.ts" type="module"></script>
   </body>
 </html>
