--- a/src/bpmn-viewer/index.html
+++ b/src/bpmn-viewer/index.html
@@ -38,7 +38,7 @@
     </main>
 
     <script type="module">
-      import "../index.ts";
+      import "./index.ts";
 
       const buttons = document.getElementById("buttons");
       const viewer = document.getElementsByTagName("bpmn-viewer")[0];
