--- a/src/dmn-viewer/index.html
+++ b/src/dmn-viewer/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <script type="module">
-      import "../index.ts";
+      import "./index.ts";
       
       const buttons = document.getElementById("buttons");
       const viewer = document.getElementsByTagName("dmn-viewer")[0];
