--- a/src/event-viewer/index.html
+++ b/src/event-viewer/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <script type="module">
-      import "../index.ts";
+      import "./index.ts";
       
       const buttons = document.getElementById("buttons");
       const viewer = document.getElementsByTagName("event-viewer")[0];
