--- a/specs/command-viewer/index.html
+++ b/specs/command-viewer/index.html
@@ -14,7 +14,7 @@
       <command-viewer src="./command1.yml"></command-viewer>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct tests/command-viewer/index.test.ts
+        npm run test-ct specs/command-viewer/index.spec.ts
       </code>
     </main>
 
