fix vite config

--- a/src/model-viewer/index.html
+++ b/src/model-viewer/index.html
@@ -20,8 +20,9 @@
         </div>
       </div>
   </main>
-  
-  <script>
+
+  <script type="module">
+    import "./index.ts";
     const viewer = document.getElementById('trainset');
 
     setTimeout(() => {
@@ -1669,7 +1670,7 @@
         }
     }
 };
-      
+
     }, 2000);
   </script>
 </body>
