--- a/specs/business-model-canvas/index.html
+++ b/specs/business-model-canvas/index.html
@@ -14,7 +14,7 @@
       <business-model-canvas></business-model-canvas>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'business-model-canvas'
+        npm run test -- 'business-model-canvas'
       </code>
     </main>
 
