--- a/specs/business-reference-architecture/index.html
+++ b/specs/business-reference-architecture/index.html
@@ -14,7 +14,7 @@
       <business-reference-architecture src="model1.yml"></business-reference-architecture>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'business-reference-architecture'
+        npm run test -- 'business-reference-architecture'
       </code>
     </main>
 
