--- a/specs/dmn-viewer/index.html
+++ b/specs/dmn-viewer/index.html
@@ -21,7 +21,7 @@
       <dmn-viewer src="dmn1.dmn"></dmn-viewer>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'dmn-viewer'
+        npm run test -- 'dmn-viewer'
       </code>
     </main>
 
