--- a/specs/event-viewer/index.html
+++ b/specs/event-viewer/index.html
@@ -14,7 +14,7 @@
       <event-viewer src="event1.yml"></event-viewer>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'event-viewer'
+        npm run test -- 'event-viewer'
       </code>
     </main>
 
