--- a/specs/query-viewer/index.html
+++ b/specs/query-viewer/index.html
@@ -14,7 +14,7 @@
       <query-viewer src="query1.yml"></query-viewer>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'query-viewer'
+        npm run test -- 'query-viewer'
       </code>
     </main>
 
