--- a/specs/task-viewer/index.html
+++ b/specs/task-viewer/index.html
@@ -14,7 +14,7 @@
       <task-viewer src="task1.yml"></task-viewer>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'task-viewer'
+        npm run test -- 'task-viewer'
       </code>
     </main>
 
