--- a/specs/command-viewer/index.html
+++ b/specs/command-viewer/index.html
@@ -14,7 +14,7 @@
       <command-viewer src="command1.yml"></command-viewer>
       <h2>Run tests</h2>
       <code>
-        npm run test-ct -- 'command-viewer'
+        npm run test -- 'command-viewer'
       </code>
     </main>
 
