added components to markdown viewer

--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -10,7 +10,15 @@
       <h1>Markdown viewer</h1>
       <div id="buttons">
         <button id="bpmn">BPMN</button>
-        <button id="tabs">tabs</button>
+        <button id="business-model-canvas">Business model canvas</button>
+        <button id="business-reference-architecture">Business reference architecture</button>
+        <button id="command">Command</button>
+        <button id="dmn">DMN</button>
+        <button id="event">Event</button>
+        <button id="model">Model</button>
+        <button id="query">Query</button>
+        <button id="tabs">Tabs</button>
+        <button id="task">Task</button>
       </div>
       <markdown-viewer src="markdown.md"></markdown-viewer>
       <h2>Run tests</h2>
