added local dereferencer

--- a/specs/business-model-canvas/index.html
+++ b/specs/business-model-canvas/index.html
@@ -27,7 +27,7 @@
       buttons.addEventListener("click", function (event) {
         const target = event.target;
         if (target.id === "change-src") {
-          viewer.setAttribute("src", viewer.src?.endsWith("canvas.yml") ? "" : "canvas.yml");
+          viewer.setAttribute("src", viewer.src?.endsWith("business-model-canvas.yml") ? "" : "business-model-canvas.yml");
         }
       });
     </script>
