--- a/specs/command-viewer/index.html
+++ b/specs/command-viewer/index.html
@@ -11,7 +11,7 @@
       <div id="buttons">
         <button id="change-src">Change src</button>
       </div>
-      <command-viewer src="command1.yml"></command-viewer>
+      <command-viewer src="1.command.yml"></command-viewer>
       <h2>Run tests</h2>
       <code>
         npm run test -- 'command-viewer'
@@ -27,7 +27,7 @@
       buttons.addEventListener("click", function (event) {
         const target = event.target;
         if (target.id === "change-src") {
-          viewer.setAttribute("src", viewer.src.endsWith("command1.yml") ? "command2.yml" : "command1.yml");
+          viewer.setAttribute("src", viewer.src.endsWith("1.command.yml") ? "2.command.yml" : "1.command.yml");
         }
       });
     </script>
