--- a/specs/query-viewer/index.html
+++ b/specs/query-viewer/index.html
@@ -11,7 +11,7 @@
       <div id="buttons">
         <button id="change-src">Change src</button>
       </div>
-      <query-viewer src="query1.yml"></query-viewer>
+      <query-viewer src="1.query.yml"></query-viewer>
       <h2>Run tests</h2>
       <code>
         npm run test -- 'query-viewer'
@@ -27,7 +27,7 @@
       buttons.addEventListener("click", function (event) {
         const target = event.target;
         if (target.id === "change-src") {
-          viewer.setAttribute("src", viewer.src.endsWith("query1.yml") ? "query2.yml" : "query1.yml");
+          viewer.setAttribute("src", viewer.src.endsWith("1.query.yml") ? "2.query.yml" : "1.query.yml");
         }
       });
     </script>
