--- a/specs/index.html
+++ b/specs/index.html
@@ -25,6 +25,7 @@
               <li><a href="./model-viewer/index.html">model viewer</a></li>
               <li><a href="./query-viewer/index.html">query viewer</a></li>
               <li><a href="./task-viewer/index.html">task viewer</a></li>
+              <li><a href="./uml-viewer/index.html">UML viewer</a></li>
             </ul>
           </div>
         </div>
