--- a/specs/index.html
+++ b/specs/index.html
@@ -22,6 +22,7 @@
               <li><a href="./dmn-viewer/index.html">DMN viewer</a></li>
               <li><a href="./event-viewer/index.html">event viewer</a></li>
               <li><a href="./markdown-viewer/index.html">markdown viewer</a></li>
+              <li><a href="./mermaid-viewer/index.html">mermaid viewer</a></li>
               <li><a href="./model-viewer/index.html">model viewer</a></li>
               <li><a href="./query-viewer/index.html">query viewer</a></li>
               <li><a href="./task-viewer/index.html">task viewer</a></li>
