--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -15,6 +15,7 @@
         <button id="command">Command</button>
         <button id="dmn">DMN</button>
         <button id="event">Event</button>
+        <button id="mermaid">Mermaid</button>
         <button id="model">Model</button>
         <button id="query">Query</button>
         <button id="tabs">Tabs</button>
@@ -36,6 +37,7 @@
       import "../../src/command-viewer";
       import "../../src/dmn-viewer";
       import "../../src/event-viewer";
+      import "../../src/mermaid-viewer";
       import "../../src/model-viewer";
       import "../../src/query-viewer";
       import "../../src/task-viewer";
