nested headers added

--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -30,7 +30,10 @@
 
     <script type="module">
       import "../../src/markdown-viewer";
-      import "../../src/shared//tabs";
+
+      import "../../src/shared/heading-container";
+      import "../../src/shared/tabs";
+
       import "../../src/bpmn-viewer";
       import "../../src/business-model-canvas";
       import "../../src/business-reference-architecture";
