--- a/specs/feature-viewer/index.html
+++ b/specs/feature-viewer/index.html
@@ -11,7 +11,7 @@
       <div id="buttons">
         <button id="change-src">Change src</button>
       </div>
-      <feature-viewer src="feature.feature"></feature-viewer>
+      <feature-viewer src="1.feature"></feature-viewer>
       <h2>Run tests</h2>
       <code>
         npm run test -- 'feature-viewer'
@@ -27,7 +27,7 @@
       buttons.addEventListener("click", function (dmn) {
         const target = dmn.target;
         if (target.id === "change-src") {
-          viewer.setAttribute("src", viewer.src.endsWith("feature.feature") ? "sample.feature" : "feature.feature");
+          viewer.setAttribute("src", viewer.src.endsWith("1.feature") ? "2.feature" : "1.feature");
         }
       });
     </script>
