--- a/specs/shared/tabs/index.html
+++ b/specs/shared/tabs/index.html
@@ -9,15 +9,27 @@
     <main>
       <h1>Tabs component</h1>
 
-      <bdo-tabs label="Example tabs">
-        <bdo-tab title="Tab 1">
-            <p>Tab 1 content</p>
+      <bdo-tabs label="My Awesome Tabs">
+        <bdo-tab title="First Section">
+          <p>This is the content for the first tab.</p>
+          <ul>
+            <li>Item A</li>
+            <li>Item B</li>
+          </ul>
         </bdo-tab>
-        <bdo-tab title="Tab 2">
-            <p>Tab 2 content</p>
+        <bdo-tab title="Second Area">
+          <h2>Welcome to Area Two!</h2>
+          <img src="./example.jpg" alt="Placeholder Image">
+          <p>More detailed information can be found here.</p>
         </bdo-tab>
-        <bdo-tab title="Tab 3">
-            <p>Tab 3 content</p>
+        <bdo-tab title="Third Option">
+          <div>
+            <strong>Important Note:</strong> This is the third tab's content.
+            <button>Click Me</button>
+          </div>
+        </bdo-tab>
+        <bdo-tab title="A Longer Title for Tab Four">
+          <p>Sometimes tab titles need to be a bit more descriptive, and that's perfectly okay!</p>
         </bdo-tab>
       </bdo-tabs>
 
