--- a/specs/shared/alert/index.html
+++ b/specs/shared/alert/index.html
@@ -9,23 +9,25 @@
     <main>
       <h1>Alert component</h1>
 
-      <bdo-alert type="info">
-        <h3>Just a heads-up!</h3>
-        <p>New content has landed.</p>
-        <p>Check it out when you get a chance.</p>
-      </bdo-alert>
+      <div style="display: flex; flex-direction: column; gap: 1rem;">
+        <bdo-alert type="info">
+          <h3>Just a heads-up!</h3>
+          <p>New content has landed.</p>
+          <p>Check it out when you get a chance.</p>
+        </bdo-alert>
 
-      <bdo-alert type="warning">
-        <h3>Heads-up!</h3>
-        <p>Proceed with caution; potential issues ahead.</p>
-        <p>Double-check before continuing.</p>
-      </bdo-alert>
+        <bdo-alert type="warning">
+          <h3>Heads-up!</h3>
+          <p>Proceed with caution; potential issues ahead.</p>
+          <p>Double-check before continuing.</p>
+        </bdo-alert>
 
-      <bdo-alert type="error">
-        <h3>Oops! Something went wrong.</h3>
-        <p>Please try again later.</p>
-        <p>If the issue persists, contact support.</p>
-      </bdo-alert>
+        <bdo-alert type="error">
+          <h3>Oops! Something went wrong.</h3>
+          <p>Please try again later.</p>
+          <p>If the issue persists, contact support.</p>
+        </bdo-alert>
+      </div>
 
       <h2>Run tests</h2>
       <code>
@@ -33,6 +35,7 @@
       </code>
     </main>
 
+    <link rel="stylesheet" href="../theme.css" />
     <script type="module">
       import "../../../src/shared/alert/index.ts";
     </script>
