theme.css.ts verwijderd uit de componenten theme.css toegevoegd aan src theme.css toegevoegd aan index.html voorbeelden

--- a/specs/bpmn-viewer/index.html
+++ b/specs/bpmn-viewer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>BPMN viewer</title>
+    <link rel="stylesheet" href="../theme.css" />
     <style>
 
       bpmn-viewer {
