--- a/specs/index.html
+++ b/specs/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>Components</title>
+    <link rel="stylesheet" href="theme.css" />
   </head>
 
   <body>
@@ -16,12 +16,22 @@
           <div class="container">
             <ul>
               <li><a href="./bpmn-viewer/index.html">BPMN viewer</a></li>
-              <li><a href="./business-model-canvas/index.html">business model canvas</a></li>
-              <li><a href="./business-reference-architecture/index.html">business reference architecture</a></li>
+              <li>
+                <a href="./business-model-canvas/index.html"
+                  >business model canvas</a
+                >
+              </li>
+              <li>
+                <a href="./business-reference-architecture/index.html"
+                  >business reference architecture</a
+                >
+              </li>
               <li><a href="./command-viewer/index.html">command viewer</a></li>
               <li><a href="./dmn-viewer/index.html">DMN viewer</a></li>
               <li><a href="./event-viewer/index.html">event viewer</a></li>
-              <li><a href="./markdown-viewer/index.html">markdown viewer</a></li>
+              <li>
+                <a href="./markdown-viewer/index.html">markdown viewer</a>
+              </li>
               <li><a href="./mermaid-viewer/index.html">mermaid viewer</a></li>
               <li><a href="./model-viewer/index.html">model viewer</a></li>
               <li><a href="./query-viewer/index.html">query viewer</a></li>
