--- a/specs/mermaid-viewer/index.html
+++ b/specs/mermaid-viewer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Mermaid viewer</title>
+    <link rel="stylesheet" href="../theme.css" />
     <style>
       mermaid-viewer {
         display: block;
