--- a/specs/dmn-viewer/index.html
+++ b/specs/dmn-viewer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>DMN viewer</title>
+    <link rel="stylesheet" href="../theme.css" />
     <style>
 
       dmn-viewer {
