--- a/specs/event-viewer/index.html
+++ b/specs/event-viewer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Event viewer</title>
+    <link rel="stylesheet" href="../theme.css" />
   </head>
 
   <body>
