Add toggle beahvior

--- a/specs/shared/heading-container/index.html
+++ b/specs/shared/heading-container/index.html
@@ -23,7 +23,7 @@
           <p>Content heading level 2</p>
 
           <bdo-heading-container heading-level="3">
-            <h3 slot="header">Heading level 3 A</h3>
+            <h3 slot="header">Heading level <mark>3 A</mark></h3>
 
             <p>Content heading level 3 A</p>
 
@@ -50,24 +50,12 @@
             <h3 slot="header">Heading level 3 B</h3>
 
             <p>Content heading level 3 B</p>
-
-            <bdo-heading-container heading-level="4">
-              <h4 slot="header">Heading level 4</h4>
-
-              <p>Content heading level 4</p>
-            </bdo-heading-container>
           </bdo-heading-container>
 
           <bdo-heading-container heading-level="3">
             <h3 slot="header">Heading level 3 C</h3>
 
             <p>Content heading level 3 C</p>
-
-            <bdo-heading-container heading-level="4">
-              <h4 slot="header">Heading level 4</h4>
-
-              <p>Content heading level 4</p>
-            </bdo-heading-container>
           </bdo-heading-container>
         </bdo-heading-container>
       </bdo-heading-container>
