--- a/specs/index.html
+++ b/specs/index.html
@@ -28,6 +28,11 @@
               <li><a href="./task-viewer/index.html">task viewer</a></li>
             </ul>
           </div>
+
+          <h2>Shared components</h2>
+            <ul>
+              <li><a href="./shared/tabs/index.html">tabs</a></li>
+            </ul>
         </div>
       </div>
     </main>
