--- a/specs/shared/alert/index.html
+++ b/specs/shared/alert/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Alert component</title>
+    <link rel="stylesheet" href="../../theme.css" />
   </head>
 
   <body>
@@ -35,7 +36,6 @@
       </code>
     </main>
 
-    <link rel="stylesheet" href="../theme.css" />
     <script type="module">
       import "../../../src/shared/alert/index.ts";
     </script>
