--- a/specs/index.html
+++ b/specs/index.html
@@ -40,12 +40,7 @@
 
             <h2>Shared components</h2>
             <ul>
-              <li><a href="./shared/alert/index.html">Alert</a></li>
-            </ul>
-          </div>
-
-          <h2>Shared components</h2>
-            <ul>
+              <li><a href="./shared/alert/index.html">alert</a></li>
               <li><a href="./shared/tabs/index.html">tabs</a></li>
             </ul>
         </div>
