rekening houdend met UI elementen

--- a/specs/bpmn-viewer/index.html
+++ b/specs/bpmn-viewer/index.html
@@ -7,7 +7,8 @@
     <style>
 
       bpmn-viewer {
-       
+        min-height: 500px;
+        max-height: 1000px;
       }
     </style>
   </head>
