Change test reference

--- a/specs/shared/icon/index.html
+++ b/specs/shared/icon/index.html
@@ -17,10 +17,12 @@
         <bdo-icon icon="mat-shield mat-add" icon-align="center" icon-justify="center" background="white"></bdo-icon>
       </div>
 
-      <h2>Run tests</h2>
-      <code>
-        npm run test -- 'bdo-alert'
-      </code>
+      <!-- 
+        <h2>Run tests</h2>
+        <code>
+          npm run test -- 'bdo-icon'
+        </code>
+       -->
     </main>
 
     <script type="module">
