--- a/specs/shared/icon/index.html
+++ b/specs/shared/icon/index.html
@@ -10,10 +10,9 @@
     <main>
       <h1>Icon component</h1>
 
-      <div style="display: flex; gap: 1rem; font-size: 2rem;">
+      <div style="display: flex; gap: 1rem; font-size: 10rem;">
         <bdo-icon icon="mat-close"></bdo-icon>
-
-        <bdo-icon icon="mat-shield mat-add"></bdo-icon>
+        <bdo-icon icon="mat-shield mat-add" background="white"></bdo-icon>
         <bdo-icon icon="mat-shield mat-add" icon-align="center" icon-justify="center" background="white"></bdo-icon>
       </div>
 
