--- a/specs/shared/icon/index.html
+++ b/specs/shared/icon/index.html
@@ -10,7 +10,13 @@
     <main>
       <h1>Icon component</h1>
 
-      <div style="display: flex; gap: 1rem; font-size: 10rem;">
+      <div style="display: flex; padding: 1rem; gap: 1rem; --font-size-base: 4rem;">
+        <bdo-icon icon="mat-close"></bdo-icon>
+        <bdo-icon icon="mat-shield mat-add" background="white"></bdo-icon>
+        <bdo-icon icon="mat-shield mat-add" icon-align="center" icon-justify="center" background="white"></bdo-icon>
+      </div>
+
+      <div style="display: flex; padding: 1rem; gap: 1rem; --font-size-base: 4rem; background: var(--color-brand-base); --text-color-base: white; --surface-current: var(--color-brand-base);">
         <bdo-icon icon="mat-close"></bdo-icon>
         <bdo-icon icon="mat-shield mat-add" background="white"></bdo-icon>
         <bdo-icon icon="mat-shield mat-add" icon-align="center" icon-justify="center" background="white"></bdo-icon>
