--- a/specs/shared/heading-container/index.html
+++ b/specs/shared/heading-container/index.html
@@ -22,37 +22,62 @@
 
           <p>Content heading level 2</p>
 
-          <bdo-heading-container>
+          <bdo-heading-container aria-expanded="true">
             <h3 slot="header">Heading level <mark>3 A</mark></h3>
 
             <p>Content heading level 3 A</p>
 
-            <bdo-heading-container>
+            <bdo-heading-container aria-expanded="true">
               <h4 slot="header">Heading level 4 A</h4>
 
               <p>Content heading level 4 A</p>
+
+              <bdo-heading-container aria-expanded="true">
+                <h5 slot="header">Heading level 5 A</h5>
+
+                <p>Content heading level 5 A</p>
+
+                <bdo-heading-container aria-expanded="true">
+                  <h6 slot="header">Heading level 6 A</h6>
+
+                  <p>Content heading level 6 A</p>
+                </bdo-heading-container>
+
+                <bdo-heading-container>
+                  <h6 slot="header">Heading level 6 B</h6>
+
+                  <p>Content heading level 6 B</p>
+                </bdo-heading-container>
+              </bdo-heading-container>
+
+              <bdo-heading-container>
+                <h5 slot="header">Heading level 5 b</h6>
+
+                <p>Content heading level 5 b</p>
+              </bdo-heading-container>
+
             </bdo-heading-container>
 
-            <bdo-heading-container>
+            <bdo-heading-container aria-expanded="false">
               <h4 slot="header">Heading level 4 B</h4>
 
               <p>Content heading level 4 B</p>
             </bdo-heading-container>
 
-            <bdo-heading-container>
+            <bdo-heading-container aria-expanded="false">
               <h4 slot="header">Heading level 4 C</h4>
 
               <p>Content heading level 4 C</p>
             </bdo-heading-container>
           </bdo-heading-container>
 
-          <bdo-heading-container>
+          <bdo-heading-container aria-expanded="false">
             <h3 slot="header">Heading level 3 B</h3>
 
             <p>Content heading level 3 B</p>
           </bdo-heading-container>
 
-          <bdo-heading-container>
+          <bdo-heading-container aria-expanded="false">
             <h3 slot="header">Heading level 3 C</h3>
 
             <p>Content heading level 3 C</p>
