--- a/specs/index.html
+++ b/specs/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <main>
-      <h1>Components</h1>
+      <h1>Viewers</h1>
 
       <ul>
         <li><a href="./bpmn-viewer/index.html">BPMN viewer</a></li>
