--- a/specs/shared/icon/index.html
+++ b/specs/shared/icon/index.html
@@ -14,7 +14,7 @@
 
       .inversed {
         background: var(--color-brand-base);
-        --text-color-base: white;
+        --icon-color: white;
         --surface-current: var(--color-brand-base);
       }
     </style>
